tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestSimpleTlsOrigination/missing_secret/_test_context/DestinationRule.3700815040.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-tls-credential-not-created-cacert
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          credentialName: tls-credential-not-created-cacert
          sni: external.external-4-11206.svc.cluster.local
